# Reviving-the-Legacy-ESP32-C3-Wireless-Adventure-A-Comprehensive-Guide-to-IoT-

./: README.md
2_light_driver/: sdkconfig
3_wifi_connection/: sdkconfig  sdkconfig.old
3_wifi_connection/components/app_wifi/: app_wifi.c
3_wifi_connection/components/light_driver/: CMakeLists.txt
3_wifi_connection/main/: app_main.c
4_network_config/: README.md  sdkconfig  sdkconfig.old
4_network_config/components/app_wifi/: CMakeLists.txt
4_network_config/components/light_driver/: iot_led.c
5_rainmaker/: README.md  sdkconfig  sdkconfig.old
5_rainmaker/components/app_wifi/: CMakeLists.txt  app_wifi.c
5_rainmaker/components/button/: CMakeLists.txt
5_rainmaker/components/light_driver/: CMakeLists.txt  light_driver.c
5_rainmaker/components/light_driver/include/: iot_led.h  light_driver.h
5_rainmaker/main/: CMakeLists.txt  app_driver.c  app_main.c  idf_component.yml  server.crt
5_rainmaker/main/include/: app_priv.h  board_esp32c3_devkitc.h
local_control/: README.md  sdkconfig  sdkconfig.old
local_control/main/: CMakeLists.txt  app_main.c  cacert.pem  idf_component.yml  prvtkey.pem  rootCA.pem  rootCA.srl  rootkey.pem  server.csr
